feat(services): add public global route to get all services grouped by category
